# $Id: CHANGELOG,v 1.73 2003/11/16 07:47:00 jaco Exp $

* Sun, Nov 16, 2003, 0.5.7-cvs
  + Buchan Milne <bgmilne@cae.co.za>:
    [linuxrc]:
      - Fix error on illegal attempt to unmount /initrd/cdrom upon
        system shutdown
      - Added hostname= boot option to set the hostname
    [mklivecd]:
      - Add support ('--extraisofiles' option) for adding
        additional files to the root of the LiveCD ISO image
        (ie to see when browsing the CD normally)
  + Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Point to the gif2lss program in the boot splash section
    [README]:
      - Updated to point to the new LiveCD home of mklivecd,
        http://developer.berlios.de/projects/livecd/ with the
        correct mailing list info
    [Rules.mk]:
      - Created list for default normal and SCSI modules
      - Created listing for optional modules
      - Split modules into Modules.mk
    [hwdetect]:
      - PS/2 mice should now work in wheel and non-wheel modes.
        Thanks to Texstar <texstar@houston.rr.com> for ideas and
        investigation. Threads around this are available from:
        http://lists.berlios.de/pipermail/minicd-scripts/2003-October/000229.html
      - Allow xres=1024x768|1280x1024|1400x1050|1600x1400 to
        specify the resolution in the case where the monitor
        cannot be reliably detected, eg. laptop panels
      - Add support for Nvidia GLX drivers
      - Add support for ATI GLX drivers
      - Detect USB Flash devices and mount them rw
      - s/LIVECD.MNT/.livecd.mnt/
      - Updated URL: http://livecd.berlios.de
      - Fix ALSA by not loading sound modules, only adding them
        to modules.conf (Reported and fix suggested by Texstar
        <texstar@houston.rr.com>)
      - Add options to modules.conf for soundcards (as detected)
      - Fix mouse setup for console
      - Fix keyboard setup for console
    [linuxrc]:
      - Allow for finding the cloop image on SCSI devices as well